--- a/carrito.html
+++ b/carrito.html
@@ -15,87 +15,88 @@
   <main role="main" >
     <div class="container pt-2" >
       <section class="text-center" >
-        <h1 class="legtra_blanca">Carrito de compras</h1>
+        <br>
+        <h1 class="titulos">Carrito de compras</h1>
         <br >
-        <table class="table table-bordered table-hover table-border"  style="background-color:#a7aad2; border-color: #9497c1;">
+        <table class="table table-bordered table-hover table-border"  style="background-color:#d55674; border-color: #d55674;">
           <thead > <!--cabeceras de la tabla-->
             <!--Titulos de la parte de arriba de la tabla -->
-            <th scope="col" style="background-color:#7f82b1;" class="d-none d-lg-block d-lg-table-cell">ID</th>
-            <th scope="col" style="background-color:#7f82b1;" class="d-none d-lg-block d-lg-table-cell" >Categoría</th> <!--Desde un tamaño lg hacia arriba mostrara la categoria si esta un lg hacia abajo la oculta-->
-            <th scope="col" style="background-color:#7f82b1;">Producto</th>
-            <th scope="col" style="background-color:#7f82b1;">Precio</th>
-            <th scope="col" style="background-color:#7f82b1;" class="d-none d-lg-block d-lg-table-cell">%Subscriptor</th>
-            <th scope="col" style="background-color:#7f82b1;" class="d-none d-lg-block d-lg-table-cell">%Oferta</th>
-            <th scope="col" style="background-color:#7f82b1;" >%Desc total</th>
-            <th scope="col" style="background-color:#7f82b1;" class="d-none d-lg-block d-lg-table-cell">Descuentos</th>
-            <th scope="col" style="background-color:#7f82b1;" >Precio a pagar</th>
-            <th scope="col" style="background-color:#7f82b1;">Opciones</th>
+            <th scope="col" style="background-color:#ef89a1;" class="d-none d-lg-block d-lg-table-cell">ID</th>
+            <th scope="col" style="background-color:#ef89a1;" class="d-none d-lg-block d-lg-table-cell" >Categoría</th> <!--Desde un tamaño lg hacia arriba mostrara la categoria si esta un lg hacia abajo la oculta-->
+            <th scope="col" style="background-color:#ef89a1;">Producto</th>
+            <th scope="col" style="background-color:#ef89a1;">Precio</th>
+            <th scope="col" style="background-color:#ef89a1;" class="d-none d-lg-block d-lg-table-cell">%Subscriptor</th>
+            <th scope="col" style="background-color:#ef89a1;" class="d-none d-lg-block d-lg-table-cell">%Oferta</th>
+            <th scope="col" style="background-color:#ef89a1;" >%Desc total</th>
+            <th scope="col" style="background-color:#ef89a1;" class="d-none d-lg-block d-lg-table-cell">Descuentos</th>
+            <th scope="col" style="background-color:#ef89a1;" >Precio a pagar</th>
+            <th scope="col" style="background-color:#ef89a1;">Opciones</th>
           </thead>
           <tbody>
             <tr> <!--tr:filas  td:columnas-->
-              <td scope="row" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">AEFS1243 </td>
-              <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">MOBA</td>
-              <td scope="col" style="background-color:#a7aad2;" >League of Legends</td>
-              <td scope="col" style="background-color:#a7aad2;" >$10.000</td>
-              <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">%5</td>
-              <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">10%</td>
-              <td scope="col" style="background-color:#a7aad2;">15%</td>
-              <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">$4.500</td>
-              <td scope="col" style="background-color:#a7aad2;" >$5.500</td>
-              <td scope="col" style="background-color:#a7aad2;" >
+              <td scope="row" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">AEFS1243 </td>
+              <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">MOBA</td>
+              <td scope="col" style="background-color:#cb6e84;" >League of Legends</td>
+              <td scope="col" style="background-color:#cb6e84;" >$10.000</td>
+              <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">%5</td>
+              <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">10%</td>
+              <td scope="col" style="background-color:#cb6e84;">15%</td>
+              <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">$4.500</td>
+              <td scope="col" style="background-color:#cb6e84;" >$5.500</td>
+              <td scope="col" style="background-color:#cb6e84;" >
                 <button type="delete" href="#" class="btn btn-primary btn-sm boton_buscar_anonimo_2">Eliminar</button>
             </td>
             </tr>
             <tr> <!--tr:filas  td:columnas-->
-              <td scope="row" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">AEFS1243 </td>
-              <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">MOBA</td>
-              <td scope="col" style="background-color:#a7aad2;" >League of Legends</td>
-              <td scope="col" style="background-color:#a7aad2;" >$10.000</td>
-              <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">%5</td>
-              <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">10%</td>
-              <td scope="col" style="background-color:#a7aad2;">15%</td>
-              <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">$4.500</td>
-              <td scope="col" style="background-color:#a7aad2;" >$5.500</td>
-              <td scope="col" style="background-color:#a7aad2;">
+              <td scope="row" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">AEFS1243 </td>
+              <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">MOBA</td>
+              <td scope="col" style="background-color:#cb6e84;" >League of Legends</td>
+              <td scope="col" style="background-color:#cb6e84;" >$10.000</td>
+              <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">%5</td>
+              <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">10%</td>
+              <td scope="col" style="background-color:#cb6e84;">15%</td>
+              <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">$4.500</td>
+              <td scope="col" style="background-color:#cb6e84;" >$5.500</td>
+              <td scope="col" style="background-color:#cb6e84;">
                 <button type="delete" href="#" class="btn btn-primary btn-sm boton_buscar_anonimo_2">Eliminar</button>
             </td>
             </tr>
             <tfoot>  <!--tfoot para hacer los calculos de las compras-->
               <tr>
-                  <td scope="col" style="background-color:#a7aad2" class="d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2" class="d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2"></td>
-                  <td scope="col" style="background-color:#a7aad2" ></td>
-                  <td scope="col" style="background-color:#a7aad2" class="d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2" class="d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2" ></td>
-                  <td scope="col" style="background-color:#a7aad2" class="d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2" >Precio sin IVA</td>
-                  <td scope="col" style="background-color:#a7aad2" >$50.000.000</td>
+                  <td scope="col" style="background-color:#cb6e84" class="d-none d-lg-block d-lg-table-cell"></td>
+                  <td scope="col" style="background-color:#cb6e84" class="d-none d-lg-block d-lg-table-cell"></td>
+                  <td scope="col" style="background-color:#cb6e84"></td>
+                  <td scope="col" style="background-color:#cb6e84" ></td>
+                  <td scope="col" style="background-color:#cb6e84" class="d-none d-lg-block d-lg-table-cell"></td>
+                  <td scope="col" style="background-color:#cb6e84" class="d-none d-lg-block d-lg-table-cell"></td>
+                  <td scope="col" style="background-color:#cb6e84" ></td>
+                  <td scope="col" style="background-color:#cb6e84" class="d-none d-lg-block d-lg-table-cell"></td>
+                  <td scope="col" style="background-color:#cb6e84" >Precio sin IVA</td>
+                  <td scope="col" style="background-color:#cb6e84" >$50.000.000</td>
               </tr>
               <tr>
-                  <td scope="col" style="background-color:#a7aad2" class="d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2" class="d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2"></td>
-                  <td scope="col" style="background-color:#a7aad2" ></td>
-                  <td scope="col" style="background-color:#a7aad2" class="d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2" class="d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2" ></td>
-                  <td scope="col" style="background-color:#a7aad2" class="d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2" >Valor del IVA (19%)</td>
-                  <td scope="col" style="background-color:#a7aad2" >$2.547</td>
+                  <td scope="col" style="background-color:#cb6e84" class="d-none d-lg-block d-lg-table-cell"></td>
+                  <td scope="col" style="background-color:#cb6e84" class="d-none d-lg-block d-lg-table-cell"></td>
+                  <td scope="col" style="background-color:#cb6e84"></td>
+                  <td scope="col" style="background-color:#cb6e84" ></td>
+                  <td scope="col" style="background-color:#cb6e84" class="d-none d-lg-block d-lg-table-cell"></td>
+                  <td scope="col" style="background-color:#cb6e84" class="d-none d-lg-block d-lg-table-cell"></td>
+                  <td scope="col" style="background-color:#cb6e84" ></td>
+                  <td scope="col" style="background-color:#cb6e84" class="d-none d-lg-block d-lg-table-cell"></td>
+                  <td scope="col" style="background-color:#cb6e84" >Valor del IVA (19%)</td>
+                  <td scope="col" style="background-color:#cb6e84" >$2.547</td>
               </tr>
               <tr>
-                  <td scope="col" style="background-color:#a7aad2" class="d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2" class="d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2"></td>
-                  <td scope="col" style="background-color:#a7aad2" ></td>
-                  <td scope="col" style="background-color:#a7aad2" class="d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2" class="d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2" ></td>
-                  <td scope="col" style="background-color:#a7aad2" class="d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2" >Total a pagar</td>
-                  <td scope="col" style="background-color:#a7aad2" >$2.547.000</td>
+                  <td scope="col" style="background-color:#cb6e84" class="d-none d-lg-block d-lg-table-cell"></td>
+                  <td scope="col" style="background-color:#cb6e84" class="d-none d-lg-block d-lg-table-cell"></td>
+                  <td scope="col" style="background-color:#cb6e84"></td>
+                  <td scope="col" style="background-color:#cb6e84" ></td>
+                  <td scope="col" style="background-color:#cb6e84" class="d-none d-lg-block d-lg-table-cell"></td>
+                  <td scope="col" style="background-color:#cb6e84" class="d-none d-lg-block d-lg-table-cell"></td>
+                  <td scope="col" style="background-color:#cb6e84" ></td>
+                  <td scope="col" style="background-color:#cb6e84" class="d-none d-lg-block d-lg-table-cell"></td>
+                  <td scope="col" style="background-color:#cb6e84" >Total a pagar</td>
+                  <td scope="col" style="background-color:#cb6e84" >$2.547.000</td>
               </tr>
           </tfoot>
           </tbody>
@@ -105,8 +106,8 @@
   </main>
   <div class="d-flex justify-content-end" style="margin-right: 90px;">
     <div class="btn-group">
-      <button class="btn" style="background-color: #a3a5c3;"type="reset">Cancelar compra</button>
-      <button class="btn" style="background-color:#7073a3;" type="submit">Comprar</button>
+      <button class="btn boton_buscar_anonimo_2" type="reset">Cancelar compra</button>
+      <button class="btn boton_buscar_anonimo_2" type="submit">Comprar</button>
     </div>
   </div>
   <br><br><br><br><br><br><br><br><br><br><br><br>
