--- a/ficha.html
+++ b/ficha.html
@@ -39,7 +39,10 @@
                   <div class="descripcion_ficha letra_blanca">
                       Descripción:
                       <br>
-                      Diablo es un juego de rol y acción ambientado en un mundo oscuro donde los jugadores combaten demonios para salvar el reino de Tristram.
+                      Juego en línea donde dos equipos de cinco jugadores luchan para 
+                      destruir la base enemiga mientras protegen la suya. 
+                      Cada jugador controla un personaje con habilidades únicas. 
+                      Ganar requiere estrategia, coordinación y habilidad individual.
                   </div>
                   <br>
                   <div class="descripcion_ficha letra_blanca">
