--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <!-- Contenido principal de la pagina CARRUSEL -->
     <main role="main" >
       <div class="container pt-2" >
+        <h1 class="text-center titulos">Solo Leveling</h1>
+        <br>
         <section class="text-center">
           <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -52,10 +54,10 @@
             <div class="card pt-2 mb-4 box-shadow index_foto_fondo" >
                 <img src="img/producto1.jpg" class="card-img-top index_prod_1" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title letra_blanca">League of Legends</h5>
+                  <h5 class="card-title titulos">League of Legends</h5>
                   <p class="card-text">
-                    <span class="index_disponible">
-                      Disponible en Bodega
+                    <span class="index_oferta">
+                      En oferta 15% de descuento
                     </span>
                     <br>
                     <span class="index_precio">
@@ -63,19 +65,16 @@
                     </span>
                     <br>
                     <span class="index_subscrito">
-                      Suscrito: $6.000
+                      Subscrito: $6.000
                     </span>
                     <br>
-                    <span class="letra_blanca ">
-                      juego en línea donde dos equipos de cinco jugadores luchan para 
+                    <span class="titulos_2 ">
+                      Juego en línea donde dos equipos de cinco jugadores luchan para 
                       destruir la base enemiga mientras protegen la suya. 
                       Cada jugador controla un personaje con habilidades únicas. 
                       Ganar requiere estrategia, coordinación y habilidad individual.
                     </span>
                     <br>
-                    <span class="index_stock">
-                      En stock: 3 unidades
-                    </span>
                   </p>
                   <a href="ficha.html" class="btn btn-primary index_btn_comprar">Comprar ahora</a>
                 </div>
@@ -88,7 +87,7 @@
 
     <div class="container">
       <p style="font-size: 18px;">
-          <a style="color:rgb(63, 63, 210)" href="ropa.html">
+          <a style="color:#ef89a1" href="ropa.html">
               <img src="img/super_oferta.png" alt="" >
               <span style="display: inline-block; vertical-align: middle;">
                   ¡¡Por compras superiores a $20.000 en productos <br>
