--- a/ingresar.html
+++ b/ingresar.html
@@ -13,19 +13,19 @@
     <div id="menu_anonimo"></div>
     <br><br><br>
     <!-- Contenido principal de la pagina -->
-    <h1 class="center letra_blanca" style="text-align: center;">Ingresar</h1>
+    <h1 class="center titulos" style="text-align: center;">Ingresar</h1>
     <br><br>
-        <div class="cuadro_login" >
-            <div class="mb-3 row" >
-                <label for="cuenta" class="col-sm-4 col-form-label letra_blanca" >Cuenta</label>
+        <div class="cuadro_login " >
+            <div class="mb-3 row " >
+                <label for="cuenta" class="col-sm-4 col-form-label titulos" >Cuenta</label>
                 <div class="col-sm-8">
                 <input type="text" class="form-control" id="cuenta" value="">
                 </div>
             </div>
-            <div class="mb-3 row">
-                <label for="password" class="col-sm-4 col-form-label letra_blanca">Contraseña</label>
+            <div class="mb-3 row ">
+                <label for="password" class="col-sm-4 col-form-label titulos">Contraseña</label>
                 <div class="col-sm-8">
-                    <input type="password" class="form-control" id="password">
+                    <input type="password" class="form-control " id="password">
                 </div>
             </div>
             <div class="mb-3 row ">
@@ -34,9 +34,9 @@
             <br>
             <h1>
               <p style="font-size: 15px;" >
-                <a class="color_footer" style="color:rgb(29, 30, 64)" href="registro.html">Registrarse</a>
+                <a class="color_footer " href="registro.html">Registrarse</a>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <a class="color_footer" style="color:rgb(29, 30, 64)" href="#">Olvidé mi contraseña</a>
+                <a class="color_footer"  href="#">Olvidé mi contraseña</a>
               </p>
             </h1>
         </div>
