--- a/m_admin.html
+++ b/m_admin.html
@@ -4,7 +4,7 @@
         <nav class="navbar navbar-expand-lg navbar-expand-mb navbar-dark bg-dark nav_anonimo">
             <div class="container-fluid">
             <img class="logo_pequeno" src="img/logo1.png" alt="">
-            <a class="navbar-brand" href="index.html">Solo Leveling</a>
+            <a class="navbar-brand" href="index.html" style="color:#ef89a1">Solo Leveling</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
             </button>
