--- a/misdatos.html
+++ b/misdatos.html
@@ -16,7 +16,7 @@
      <main role="main">
         <div class="container" style="margin-right: 10px;">
           <section>
-            <h1 class="letra_blanca" style="margin: 25px;">Mis Datos</h1>
+            <h1 class="titulos" style="margin: 25px;">Mis Datos</h1>
             <br>
             <form class="row g-3 needs-validation" action="" novalidate> <!--van todos los controles graficos para poder registrar al cliente-->
               <div class="container-fluid">
@@ -26,56 +26,56 @@
                   <div class="col-sm-12 col-md-6">
   
                     <div class="mb-3 fw-bold">
-                      <label for="rut" class="form-label letra_blanca">RUT</label>
+                      <label for="rut" class="form-label titulos_2">RUT</label>
                       <input type="text" class="form-control registro_color"  id="rut" placeholder="12.345.678-k" required>
                       <div class="invalid-feedback ">Debe llenar el campo RUT</div>
                     </div>
   
                     <div class="mb-3 fw-bold">
-                      <label for="nombres" class="form-label letra_blanca">Nombres</label>
+                      <label for="nombres" class="form-label titulos_2">Nombres</label>
                       <input type="text" class="form-control registro_color" id="nombres" placeholder="Ana" required>
                       <div class="invalid-feedback">Debe llenar el campo Nombres</div>
                     </div>
   
                     <div class="mb-3 fw-bold">
-                      <label for="apellidos" class="form-label letra_blanca">Apellidos</label>
+                      <label for="apellidos" class="form-label titulos_2">Apellidos</label>
                       <input type="text" class="form-control registro_color" id="apellidos" placeholder="Torres" required>
                       <div class="invalid-feedback">Debe llenar el campo Apellidos</div>
                     </div>
   
                     <div class="mb-3 fw-bold">
-                      <label for="email" class="form-label letra_blanca">Correo electrónico</label>
+                      <label for="email" class="form-label titulos_2">Correo electrónico</label>
                       <input type="email" class="form-control registro_color" id="email" placeholder="a.torres@duocuc.cl" required>
-                      <div id="emailhelp" class=" letra_blanca">Nunca compartiremos su correo electronico con nadie mas</div>
+                      <div id="emailhelp" class=" titulos_2">Nunca compartiremos su correo electronico con nadie mas</div>
                       <div class="invalid-feedback">Debe llenar el campo correo electrónico</div>
                     </div>
   
                     <div class="mb-3 fw-bold">
-                      <label for="direccion" class="form-label letra_blanca">Dirección</label>
+                      <label for="direccion" class="form-label titulos_2">Dirección</label>
                       <textarea class="form-control registro_color" id="direccion" rows="3" placeholder="San Juan Bautista 423, Santiago Centro, Región Metropolitana" required ></textarea>
-                      <div class="invalid-feedback letra_blanca">Debe llenar el campo Dirección</div>
+                      <div class="invalid-feedback titulos_2">Debe llenar el campo Dirección</div>
                     </div>
   
                     <div class="mb-3" form-check >
                       <input class="form-check-label" type="checkbox" value="" id="subscripcion" >
                       <label class="form-check-label" for="subscripcion" >
-                        <strong class="letra_blanca">
+                        <strong class="titulos_2">
                         Subscribirme a la fundación
                         </strong>
                       </label>
-                      <div id="subscripcionhelp" class="letra_blanca" >
+                      <div id="subscripcionhelp" class="titulos_2" >
                         Deseo subscribirme con un aporte de $3.000 mensuales y obtener un 5% de descuento  en mis compras
                       </div>
                     </div>
   
                     <div class="mb-3 fw-bold">
-                      <label for="password" class="form-label letra_blanca">Contraseña</label>
+                      <label for="password" class="form-label titulos_2">Contraseña</label>
                       <input type="password" class="form-control registro_color" id="paswoord" placeholder="*************" required>
                       <div class="invalid-feedback ">Debe llenar el campo Contraseña</div>
                     </div>
   
                     <div class="mb-3 fw-bold">
-                      <label for="password2" class="form-label letra_blanca">Repetir contraseña</label>
+                      <label for="password2" class="form-label titulos_2">Repetir contraseña</label>
                       <input type="password" class="form-control registro_color" id="paswoord2" placeholder="*************" required>
                       <div class="invalid-feedback">Debe repetir la contraseña</div>
                     </div>
@@ -93,15 +93,15 @@
                         </tr>
                         <tr>
                             <td>
-                                <input type="file" id="upload-image" class="form-control required" style="background-color: #7073a3">
+                                <input type="file" id="upload-image" class="form-control boton_buscar_anonimo_2 required" >
                             </td>
                         </tr>
                     </table>
                 </div>
                 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
                 <div class="btn-group" style="width: 20px;">
-                  <button type="update" class="btn boton-pag-registrarse" style="background-color: #a3a5c3;">Guardar</button>
-                  <button type="reset" class="btn boton-pag-registrarse" style="background-color:#7073a3;">Limpiar</button>
+                  <button type="update" class="btn boton-pag-registrarse boton_buscar_anonimo_2" >Guardar</button>
+                  <button type="reset" class="btn boton-pag-registrarse boton_buscar_anonimo_2">Limpiar</button>
                 </div>
 
               </div>
