--- a/nosotros.html
+++ b/nosotros.html
@@ -19,7 +19,7 @@
   <br><b></b>
   <!-- Contenido principal de la pagina -->
   <div class="container">
-    <h1 class="text-center letra_blanca">Nosotros</h1>
+    <h1 class="text-center titulos">Nosotros</h1>
     <div class="row" >
       <!-- Tienda -->
       <div class="card p-2 col-sm-12 col-md-6 col-lg-4 col-xl-3 borde_nosotros" style="border: 1px solid black;">
@@ -27,8 +27,8 @@
           <img src="img/logo1.png" class="card-img-top img-fluid" style="max-width: 100%; height: auto;" alt="...">
           <br>
           <div class="card-body">
-            <h2 class="card-title text-center" style="color: #9c9fcd;">Solo Leveling</h2>
-            <p class="card-text">
+            <h2 class="card-title text-center titulos">Solo Leveling</h2>
+            <p class="card-text titulos_2">
               Es el lugar ideal para los amantes de los videojuegos, con una amplia 
               selección de títulos emocionantes y mercancía relacionada. Ofrece una 
               experiencia inmersiva para jugadores de todas las edades. También cuenta 
@@ -44,8 +44,8 @@
           <img src="img/perfil_usuario.webp" class="card-img-top img-fluid" style="max-width: 100%; height: auto;" alt="...">
           <br>
           <div class="card-body">
-            <h2 class="card-title text-center" style="color: #9c9fcd;">Gerente general</h2>
-            <p class="card-text">
+            <h2 class="card-title text-center titulos">Gerente general</h2>
+            <p class="card-text titulos_2">
               Impulsa nuestra tienda, fusionando la pasión por los videojuegos con un servicio excepcional. 
               Su liderazgo crea el destino perfecto para los aficionados, ofreciendo una amplia selección de 
               títulos emocionantes y una experiencia inmersiva para todas las edades. 
@@ -61,8 +61,8 @@
           <img src="img/perfil_usuario2.webp" class="card-img-top img-fluid" style="max-width: 100%; height: auto;" alt="...">
           <br>
           <div class="card-body">
-            <h2 class="card-title text-center" style="color: #9c9fcd;">Director de Ventas</h2>
-            <p class="card-text">
+            <h2 class="card-title text-center titulos">Director de Ventas</h2>
+            <p class="card-text titulos_2">
               Impulsa las ventas y la satisfacción del cliente, liderando un equipo dedicado. 
               Su enfoque estratégico garantiza una experiencia de compra excepcional con una 
               amplia variedad de productos emocionantes. Su liderazgo inspirador asegura que 
@@ -78,8 +78,8 @@
         <div class="card borde_nosotros" >
           <img src="img/perfil_usuario3.webp" class="card-img-top img-fluid" style="max-width: 100%; height: auto;" alt="...">
           <div class="card-body">
-            <h3 class="card-title text-center" style="color: #9c9fcd;">Encargado de Atención al Cliente </h3>
-            <p class="card-text">
+            <h3 class="card-title text-center titulos">Encargado de Atención al Cliente </h3>
+            <p class="card-text titulos_2">
               Lidera un equipo enfocado en brindar un servicio excepcional. Su enfoque centrado en el cliente 
               garantiza una experiencia satisfactoria en cada interacción. Con empatía y profesionalismo, 
               asegura que cada cliente se sienta valorado, haciendo que cada visita a nuestra 
