--- a/ventas.html
+++ b/ventas.html
@@ -20,30 +20,30 @@
     <Section>
       <div class="container pt-2" >
         <section class="text-center" >
-          <h1 class="letra_blanca" style="margin: 25px;">Historial de Ventas</h1>
+          <h1 class="titulos" style="margin: 25px;">Historial de Ventas</h1>
           <br>
-          <table class="table table-bordered table-hover table-border"  style="background-color:#a7aad2; border-color: #9497c1;">
+          <table class="table table-bordered table-hover table-border"  style="background-color:#d55674; border-color: #d55674;">
             <thead > <!--cabeceras de la tabla-->
               <!--Titulos de la parte de arriba de la tabla -->
-              <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">Nro boleta</th>
-              <th scope="col" style="background-color:#7f82b1">Fecha</th> 
-              <th scope="col" style="background-color:#7f82b1">Nombre cliente</th>
-              <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">Subscrito</th>
-              <th scope="col" style="background-color:#7f82b1">Monto total</th>
-              <th scope="col" style="background-color:#7f82b1">Estado actual</th>
-              <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">Detalle</th>
-              <th scope="col" style="background-color:#7f82b1">Cambiar estado</th>
+              <th scope="col" style="background-color:#ef89a1" class="d-none d-lg-block d-lg-table-cell">Nro boleta</th>
+              <th scope="col" style="background-color:#ef89a1">Fecha</th> 
+              <th scope="col" style="background-color:#ef89a1">Nombre cliente</th>
+              <th scope="col" style="background-color:#ef89a1" class="d-none d-lg-block d-lg-table-cell">Subscrito</th>
+              <th scope="col" style="background-color:#ef89a1">Monto total</th>
+              <th scope="col" style="background-color:#ef89a1">Estado actual</th>
+              <th scope="col" style="background-color:#ef89a1" class="d-none d-lg-block d-lg-table-cell">Detalle</th>
+              <th scope="col" style="background-color:#ef89a1">Cambiar estado</th>
             </thead>
             <tbody>
               <tr>
-                <td scope="row" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">324</td>
-                <td scope="row" style="background-color:#a7aad2;">01 /08/ 2024 </td>
-                <td scope="col" style="background-color:#a7aad2;">Javier Hernández</td>
-                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">Sí</td>
-                <td scope="col" style="background-color:#a7aad2;">$15.000</td>
-                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">Vendido</td>
-                <td scope="col" class="ver-detalle" style="background-color:#a7aad2;" onclick="verDetalle()">Ver Detalle</td>
-                <td scope="col" style="background-color:#a7aad2;">
+                <td scope="row" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">324</td>
+                <td scope="row" style="background-color:#cb6e84;">01 /08/ 2024 </td>
+                <td scope="col" style="background-color:#cb6e84;">Javier Hernández</td>
+                <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Sí</td>
+                <td scope="col" style="background-color:#cb6e84;">$15.000</td>
+                <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Vendido</td>
+                <td scope="col" class="ver-detalle" style="background-color:#cb6e84; color:#fdfdfd" onclick="verDetalle()">Ver Detalle</td>
+                <td scope="col" style="background-color:#cb6e84;">
                   <div class="botones-container">
                     <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Anulado</button>
                     <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Vendido</button>
@@ -53,14 +53,14 @@
                 </td>
               </tr>
               <tr> <!--tr:filas  td:columnas-->
-                  <td scope="row" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">233</td>
-                  <td scope="row" style="background-color:#a7aad2;">04 /05/ 2023 </td>
-                  <td scope="col" style="background-color:#a7aad2;">Ana García</td>
-                  <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">No</td>
-                  <td scope="col" style="background-color:#a7aad2;">$10.000</td>
-                  <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">En Bodega</td>
-                  <td scope="col" class="ver-detalle" style="background-color:#a7aad2;" onclick="verDetalle()">Ver Detalle</td>
-                  <td scope="col" style="background-color:#a7aad2;">
+                  <td scope="row" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">233</td>
+                  <td scope="row" style="background-color:#cb6e84;">04 /05/ 2023 </td>
+                  <td scope="col" style="background-color:#cb6e84;">Ana García</td>
+                  <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">No</td>
+                  <td scope="col" style="background-color:#cb6e84;">$10.000</td>
+                  <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">En Bodega</td>
+                  <td scope="col" class="ver-detalle" style="background-color:#cb6e84; color:#fdfdfd" onclick="verDetalle()">Ver Detalle</td>
+                  <td scope="col" style="background-color:#cb6e84;">
                     <div class="botones-container">
                       <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Anulado</button>
                       <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Vendido</button>
@@ -70,14 +70,14 @@
                   </td>
               </tr>
               <tr> <!--tr:filas  td:columnas-->
-                <td scope="row" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">152</td>
-                <td scope="row" style="background-color:#a7aad2;">24 /01/ 2024 </td>
-                <td scope="col" style="background-color:#a7aad2;">Ricardo Flores</td>
-                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">Sí</td>
-                <td scope="col" style="background-color:#a7aad2;">$7.000</td>
-                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">Entregado</td>
-                <td scope="col" class="ver-detalle" style="background-color:#a7aad2;" onclick="verDetalle()">Ver Detalle</td>
-                <td scope="col" style="background-color:#a7aad2;">
+                <td scope="row" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">152</td>
+                <td scope="row" style="background-color:#cb6e84;">24 /01/ 2024 </td>
+                <td scope="col" style="background-color:#cb6e84;">Ricardo Flores</td>
+                <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Sí</td>
+                <td scope="col" style="background-color:#cb6e84;">$7.000</td>
+                <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Entregado</td>
+                <td scope="col" class="ver-detalle" style="background-color:#cb6e84;color:#fdfdfd" onclick="verDetalle()">Ver Detalle</td>
+                <td scope="col" style="background-color:#cb6e84;">
                   <div class="botones-container">
                     <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Anulado</button>
                     <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Vendido</button>
@@ -87,14 +87,14 @@
               </td>
               </tr>
               <tr> <!--tr:filas  td:columnas-->
-                  <td scope="row" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">255</td>
-                  <td scope="row" style="background-color:#a7aad2;">17 /12/ 2023</td>
-                  <td scope="col" style="background-color:#a7aad2;">María López</td>
-                  <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">Sí</td>
-                  <td scope="col" style="background-color:#a7aad2;">$38.000</td>
-                  <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">Anulado</td>
-                  <td scope="col" class="ver-detalle" style="background-color:#a7aad2;" onclick="verDetalle()">Ver Detalle</td>
-                  <td scope="col" style="background-color:#a7aad2;">
+                  <td scope="row" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">255</td>
+                  <td scope="row" style="background-color:#cb6e84;">17 /12/ 2023</td>
+                  <td scope="col" style="background-color:#cb6e84;">María López</td>
+                  <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Sí</td>
+                  <td scope="col" style="background-color:#cb6e84;">$38.000</td>
+                  <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Anulado</td>
+                  <td scope="col" class="ver-detalle" style="background-color:#cb6e84; color:#fdfdfd" onclick="verDetalle()">Ver Detalle</td>
+                  <td scope="col" style="background-color:#cb6e84;">
                     <div class="botones-container">
                       <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Anulado</button>
                       <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Vendido</button>
