--- a/administracion.html
+++ b/administracion.html
@@ -13,7 +13,7 @@
     <div id="menu_admin"></div>
 
     <!-- Contenido de la página-->
-    <h1 style="margin: 30px;">Administrar Tienda</h1>
+    <h1 class="titulos" style="margin: 30px;">Administrar Tienda</h1>
     <div class="container">
       <div class="row">
           <div class="col-md-auto">
