--- a/boleta.html
+++ b/boleta.html
@@ -16,15 +16,15 @@
       <div class="container pt-2" >
         <section class="" >
           <div class="container d-flex justify-content-between align-items-center">
-            <h1>Detalle de Boleta 2345</h1>
+            <h1 class="titulos">Detalle de Boleta 2345</h1>
             <div class="d-flex">
               <div class="user-image img-fluid mt-4 ml-md-4" style="width:100px;">
-                <img src="img/vendido.png" class="card-img-top" alt="...">
+                <img src="img/vendido.webp" class="card-img-top" alt="...">
                 <p class="text-center" style="color:rgb(131, 226, 150)">Vendido <br> 17/04/2024 <br>14:36</p>
               </div>
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               <div class="user-image img-fluid mt-4 ml-md-4" style="width: 100px;">
-                <img src="img/despachado.png" class="card-img-top" alt="...">
+                <img src="img/despachado.webp" class="card-img-top" alt="...">
                 <p class="text-center" style="color:rgb(213, 226, 131)">Despachado <br> 19/04/2024 <br>09:12</p>
               </div>
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -35,80 +35,80 @@
             </div>
           </div>
           <br>
-          <table class="table table-bordered table-hover table-border"  style="background-color:#a7aad2; border-color: #9497c1;">
+          <table class="table table-bordered table-hover table-border"  style="background-color:#d55674; border-color: #d55674;">
             <thead > <!--cabeceras de la tabla-->
               <!--Titulos de la parte de arriba de la tabla -->
-              <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">Categoría</th>
-              <th scope="col" style="background-color:#7f82b1">Producto</th> 
-              <th scope="col" style="background-color:#7f82b1">Precio</th> 
-              <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">%Subscriptor</th>
-              <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">%Oferta</th>
-              <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">%Desc. total</th>
-              <th scope="col" style="background-color:#7f82b1">Descuentos</th>
-              <th scope="col" style="background-color:#7f82b1">Precio a pagar</th>
+              <th scope="col" style="background-color:#ef89a1" class="d-none d-lg-block d-lg-table-cell">Categoría</th>
+              <th scope="col" style="background-color:#ef89a1">Producto</th> 
+              <th scope="col" style="background-color:#ef89a1">Precio</th> 
+              <th scope="col" style="background-color:#ef89a1" class="d-none d-lg-block d-lg-table-cell">%Subscriptor</th>
+              <th scope="col" style="background-color:#ef89a1" class="d-none d-lg-block d-lg-table-cell">%Oferta</th>
+              <th scope="col" style="background-color:#ef89a1" class="d-none d-lg-block d-lg-table-cell">%Desc. total</th>
+              <th scope="col" style="background-color:#ef89a1">Descuentos</th>
+              <th scope="col" style="background-color:#ef89a1">Precio a pagar</th>
             </thead>
             <tbody>
               <tr> 
-                <td scope="row" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">Acción RPG</td>
-                <td scope="col" style="background-color:#a7aad2;">Diablo III</td>
-                <td scope="col" style="background-color:#a7aad2;">$5.000</td>
-                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell"> 5% </td>
-                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell"> 5% </td>
-                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell"> 10% </td>
-                <td scope="col" style="background-color:#a7aad2;">  $500</td>
-                <td scope="col" style="background-color:#a7aad2;">  $4.500</td>
+                <td scope="row" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Acción RPG</td>
+                <td scope="col" style="background-color:#cb6e84;">Diablo III</td>
+                <td scope="col" style="background-color:#cb6e84;">$5.000</td>
+                <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell"> 5% </td>
+                <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell"> 5% </td>
+                <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell"> 10% </td>
+                <td scope="col" style="background-color:#cb6e84;">  $500</td>
+                <td scope="col" style="background-color:#cb6e84;">  $4.500</td>
               </tr>
             </tbody>
 
             <tbody>
               <tr> 
-                <td scope="row" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">MOBA</td>
-                <td scope="col" style="background-color:#a7aad2;">League of legend</td>
-                <td scope="col" style="background-color:#a7aad2;">$10.000</td>
-                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell"> 0% </td>
-                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell"> 0% </td>
-                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell"> 0% </td>
-                <td scope="col" style="background-color:#a7aad2;">  $0 </td>
-                <td scope="col" style="background-color:#a7aad2;">  10.000</td>
+                <td scope="row" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">MOBA</td>
+                <td scope="col" style="background-color:#cb6e84;">League of legend</td>
+                <td scope="col" style="background-color:#cb6e84;">$10.000</td>
+                <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell"> 0% </td>
+                <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell"> 0% </td>
+                <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell"> 0% </td>
+                <td scope="col" style="background-color:#cb6e84;">  $0 </td>
+                <td scope="col" style="background-color:#cb6e84;">  10.000</td>
               </tr>
             </tbody>
 
             <tbody>
               <tr> 
-                <td scope="row" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">Shooter  </td>
-                <td scope="col" style="background-color:#a7aad2;">Counter Strike </td>
-                <td scope="col" style="background-color:#a7aad2;"> $7.000</td>
-                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">25%  </td>
-                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell"> 0% </td>
-                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">25% </td>
-                <td scope="col" style="background-color:#a7aad2;"> $1.750 </td>
-                <td scope="col" style="background-color:#a7aad2;"> $5.250 </td>
+                <td scope="row" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">Shooter  </td>
+                <td scope="col" style="background-color:#cb6e84;">Counter Strike </td>
+                <td scope="col" style="background-color:#cb6e84;"> $7.000</td>
+                <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">25%  </td>
+                <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell"> 0% </td>
+                <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">25% </td>
+                <td scope="col" style="background-color:#cb6e84;"> $1.750 </td>
+                <td scope="col" style="background-color:#cb6e84;"> $5.250 </td>
               </tr>
             </tbody>
 
             <tbody>
               <tr> 
-                <td scope="row" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">MMORPG</td>
-                <td scope="col" style="background-color:#a7aad2;">Dofus</td>
-                <td scope="col" style="background-color:#a7aad2;">$3.000</td>
-                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">10%  </td>
-                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell"> 5% </td>
-                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">15% </td>
-                <td scope="col" style="background-color:#a7aad2;"> $450  </td>
-                <td scope="col" style="background-color:#a7aad2;">  $2.550</td>
+                <td scope="row" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">MMORPG</td>
+                <td scope="col" style="background-color:#cb6e84;">Dofus</td>
+                <td scope="col" style="background-color:#cb6e84;">$3.000</td>
+                <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">10%  </td>
+                <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell"> 5% </td>
+                <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">15% </td>
+                <td scope="col" style="background-color:#cb6e84;"> $450  </td>
+                <td scope="col" style="background-color:#cb6e84;">  $2.550</td>
               </tr>
             </tbody>
 
             <tbody>
               <tr> 
-                <td scope="row" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">The Sims </td>
-                <td scope="col" style="background-color:#a7aad2;">The Sims</td>
-                <td scope="col" style="background-color:#a7aad2;">$12.000</td>
-                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">0% </td>
-                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell"> 10% </td>
-                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">10% </td>
-                <td scope="col" style="background-color:#a7aad2;">  $1.200</td>
-                <td scope="col" style="background-color:#a7aad2;">  $10.800</td>
+                <td scope="row" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">The Sims </td>
+                <td scope="col" style="background-color:#cb6e84;">The Sims</td>
+                <td scope="col" style="background-color:#cb6e84;">$12.000</td>
+                <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">0% </td>
+                <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell"> 10% </td>
+                <td scope="col" style="background-color:#cb6e84;" class="d-none d-lg-block d-lg-table-cell">10% </td>
+                <td scope="col" style="background-color:#cb6e84;">  $1.200</td>
+                <td scope="col" style="background-color:#cb6e84;">  $10.800</td>
               </tr>
             </tbody>
             
@@ -124,7 +124,7 @@
           <td style="vertical-align: top;">
             <div style="width: 100px; text-align: right;">
               <p style="font-size: 16px; color: white; margin-bottom: 5px;">Precio sin IVA</p>
-              <div style="background-color: #a7aad2; border: 2px solid black; padding: 5px;">
+              <div class="boton_buscar_anonimo" style="border: 2px solid black; padding: 5px;">
                 <p style="margin: 0; font-size: 16px; color: rgb(0, 0, 0);">13.000</p>
               </div>
             </div>
@@ -134,7 +134,7 @@
           <td style="vertical-align: top;">
             <div style="width: 100px; text-align: right;">
               <p style="font-size: 16px; color: white; margin-bottom: 5px;">Valor del IVA (19%)</p>
-              <div style="background-color: #a7aad2; border: 2px solid black; padding: 5px;">
+              <div class="boton_buscar_anonimo" style="border: 2px solid black; padding: 5px;">
                 <p style="margin: 0; font-size: 16px; color: rgb(0, 0, 0);">2.547</p>
               </div>
             </div>
@@ -144,7 +144,7 @@
           <td style="vertical-align: top;">
             <div style="width: 100px; text-align: right;">
               <p style="font-size: 16px; color: white; margin-bottom: 5px;">Total a pagar</p>
-              <div style="background-color: #a7aad2; border: 2px solid black; padding: 5px;">
+              <div class="boton_buscar_anonimo" style=" border: 2px solid black; padding: 5px;">
                 <p style="margin: 0; font-size: 16px; color: rgb(0, 0, 0);">33.100</p>
               </div>
             </div>
